--- a/Diary/220709_Sat_diary.html
+++ b/Diary/220709_Sat_diary.html
@@ -38,7 +38,7 @@
                              学名表記を新たに知ることもできて良かったです。ライラック研究者(？)の方と将来知り合えたときに話題が広げられたら嬉しいです。</br>
  
        <p class="diary_sent">ちょうど明日7月10日(日)の小倉5Rがデビュー戦となります。</br>
-                             早口で呼ぶのが何気に難しそうな本馬、実況アナウンサーの方に馬名を連呼されまくるような熱いレースになることを期待しています。</br>
+                             早口で呼ぶのが何気に難しそうな馬名ですが、実況アナウンサーの方に連呼されまくるような熱いレース展開を期待しています。</br>
       
     </main>
    
