--- a/Diary/220723_Sat_diary.html
+++ b/Diary/220723_Sat_diary.html
@@ -29,16 +29,22 @@
                              フランス語で「南京錠」のことらしく、なんというか馬名に使用された意外さがあって、それ以来ずっと名前で気になっています。</br>
                              今回もレースへの出走を知って名前を見たときに、名前について色々と疑問が湧いてきました。</br>
 
-       <p class="diary_sent">私が本馬に惹かれた理由は、注目のオルフェーブル産駒であるということの他に、その馬名の由来にもあります。</br>
-                             本馬の母「ライラックスアンドレース」と姉「ラッキーライラック」には「ライラック」という落葉花木の名前が共通して入っています。</br>
-                             弟には「ライラック」という言葉は入らないのだなと思ったのですが、</br>
-                             実は「シリンガバルガリス」というのは、ライラックの学名"Syringa Vulgaris"に由来しているとのことでした。</br>
-                             そのままの名前ではなくあえてラテン語の学名で名付けるという点がおしゃれだなと感じるとともに、</br>
-                             私自身の専攻科目で動植物の学名を使う機会があり親しみやすさを感じたため、応援しようという思いに至りました。</br>
-                             学名表記を新たに知ることもできて良かったです。ライラック研究者(？)の方と将来知り合えたときに話題が広げられたら嬉しいです。</br>
+      <ul class="diary-list">
+       <li>南京錠ってフランスにあるのか？</li>
+       <li>そもそもどこ産なのか？日本産？</li>
+       <li>いやいや、「南京」なのだから中国産では？</li>
+       <li>パソコンの「ロックしました」みたいな画面では南京錠のアイコンが多い気がする。じゃあ、やっぱり欧米産？</li>
+       <li>関西でかぼちゃのことを南京と呼ぶのと関係あるのか？</li>
+       <li>そういえば昔流行っていた(？)鍵付き交換ノートについているのって南京錠だった。鍵を紛失してノートを開けられなくなるメンバーが必ず出てくる。</li>
+      </ul>
+
+       <p class="diary_sent">馬名1つでここまで色々考えてしまいました。結局どこ産なのでしょう</br>
+                             あとイントネーションとしてはどう発音するのがフランス語として正解なのでしょうか。</br>
+                             「カメラ」と同じアクセントで「カデナ」と呼んでいるのですが...。</br>
+                             そして何より、馬主の方がこの言葉を命名に使った理由をぜひ知りたいです。</br>
  
-       <p class="diary_sent">ちょうど明日7月10日(日)の小倉5Rがデビュー戦となります。</br>
-                             早口で呼ぶのが何気に難しそうな馬名ですが、実況アナウンサーの方に連呼されまくるような熱いレース展開を期待しています。</br>
+       <p class="diary_sent">馬名から南京錠の話に移り、懐かしのファンシー文具にまで思いを馳せることになって少し驚きですが、</br>
+                             新コンビになったことでどのようなカデナの走りが見られるのか、楽しみにしています。</br>
       
     </main>
    
