--- a/Diary/220723_Sat_diary.html
+++ b/Diary/220723_Sat_diary.html
@@ -18,7 +18,7 @@
       </div> 
 
     <main>
-      <h1 class="diary_title">22/07/23  カデナ(南京錠)に感じること 第2弾</h1>
+      <h1 class="diary_title">22/07/23  カデナ(南京錠)に感じること</h1>
        
        <p class="diary_sent">明日7月24日(日)に行われる小倉11R中京記念にカデナ(牡8歳)が出走します。</br>
                              2年ぶり4度目の重賞制覇狙い、好走歴のある小倉出走、長期キャリア8歳の底力、今村騎手との初コンビ、最重量ハンデなど、</br>
