--- a/Diary/220723_Sat_diary.html
+++ b/Diary/220723_Sat_diary.html
@@ -38,7 +38,7 @@
        <li>そういえば昔流行っていた(？)鍵付き交換ノートについているのって南京錠だった。鍵を紛失してノートを開けられなくなるメンバーが必ず出てくる。</li>
       </ul>
 
-       <p class="diary_sent">馬名1つでここまで色々考えてしまいました。結局どこ産なのでしょう</br>
+       <p class="diary_sent">馬名1つでここまで色々考えてしまいました。結局どこ産なのでしょう。</br>
                              あとイントネーションとしてはどう発音するのがフランス語として正解なのでしょうか。</br>
                              「カメラ」と同じアクセントで「カデナ」と呼んでいるのですが...。</br>
                              そして何より、馬主の方がこの言葉を命名に使った理由をぜひ知りたいです。</br>
