--- a/c01_aim.html
+++ b/c01_aim.html
@@ -28,6 +28,7 @@
          
       <h3 class="task">Webサイト作成上での当面の課題・予定</h3>
       <ul class="task-list">
+       <li>作者紹介のアイコンサイズが調整できない(位置は大体理想通りだけどサイズが小さくならない)</li>
        <li>画像を入れてみる（作者紹介のアイコン・Top picuture・Gallary）</li>
        <li>他ページの大枠レイアウトを整える（Gallary Archives・作品ページ・当サイトの目的・競走馬の魅力）</li>
        <li>@media screenを使ったレスポンシブデザインがうまく表示されない(レイアウトが崩れる)</li>
